--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scrat-command-checklog",
-  "version": "0.1.7",
+  "version": "1.0.0",
   "description": "scrat checklog",
   "main": "index.js",
   "scripts": {
@@ -15,14 +15,20 @@
     "scrat",
     "checklog"
   ],
-  "author": "zack-lin",
+  "author": {
+    "name": "zack-lin"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/zack-lin/scrat-command-checklog/issues"
   },
   "homepage": "https://github.com/zack-lin/scrat-command-checklog",
   "dependencies": {
-    "mkdirp": "~0.5.0",
-    "log4js": "~0.6.21"
-  }
+    "underscore": "~1.7.0",
+    "csv-write-stream": "~0.3.0"
+  },
+  "readme": "# scrat checklog\n",
+  "readmeFilename": "README.md",
+  "_id": "scrat-command-checklog@0.1.3",
+  "_from": "scrat-command-checklog@"
 }
